NetBSD Problem Report #48880

From ryo_on@yk.rim.or.jp  Sat Jun  7 06:18:05 2014
Return-Path: <ryo_on@yk.rim.or.jp>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher ECDHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 4C3C8A651B
	for <gnats-bugs@gnats.NetBSD.org>; Sat,  7 Jun 2014 06:18:05 +0000 (UTC)
Message-Id: <20140607061801.55B4EDC2C6@mail.SiriusCloud.jp>
Date: Sat,  7 Jun 2014 15:18:01 +0900 (JST)
From: ryoon@NetBSD.org
Reply-To: ryoon@NetBSD.org
To: gnats-bugs@gnats.NetBSD.org
Subject: new sed(1) is broken
X-Send-Pr-Version: 3.95

>Number:         48880
>Category:       bin
>Synopsis:       new sed(1) is broken
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    christos
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jun 07 06:20:00 +0000 2014
>Closed-Date:    Tue Jun 10 00:18:54 +0000 2014
>Last-Modified:  Tue Jun 10 00:18:54 +0000 2014
>Originator:     Ryo ONODERA
>Release:        NetBSD 6.99.43
>Organization:

>Environment:


System: NetBSD tellurium.elements.tetera.org 6.99.43 NetBSD 6.99.43 (DTRACE2) #31: Fri Jun 6 17:28:03 JST 2014 ryo_on@tellurium.elements.tetera.org:/usr/obj/amd64/sys/arch/amd64/compile/DTRACE2 amd64
Architecture: x86_64
Machine: amd64
>Description:
With newly imported sed(1), all GNU Autotoolized application's man page
installation fails.

The following is test pattern.

$ cat sed_test.sh
sed -e 'n;p;h;s,.*\.,,;x' \
      -e 's,\.1$,,;G;s,\n,.,' | \
{ \
while read file ; do \
    echo "$file" || exit $?; \
done; \
}

$ cat test.txt
sed.1
awk.1
perl.1

With new sed(1),
$ cat test.txt | sh sed_test.sh
sed.1
awk.1
awk1
perl.1

With new sed(1),
$ cat test.txt| PATH=./:$PATH sh 140607-sed_tesh.sh (nbsed is in ./)
sed.1
awk.1
awk.1
perl.1

With pkgsrc/textproc/gsed,
Here is the result.
sed.1
awk.1
awk.1
perl.1

>How-To-Repeat:
See above.

>Fix:

I have no idea. Please fix this.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: bin-bug-people->christos
Responsible-Changed-By: ryoon@NetBSD.org
Responsible-Changed-When: Sat, 07 Jun 2014 06:21:35 +0000
Responsible-Changed-Why:
Over to importer


From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48880 CVS commit: src/usr.bin/sed
Date: Sat, 7 Jun 2014 12:36:54 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Sat Jun  7 16:36:54 UTC 2014

 Modified Files:
 	src/usr.bin/sed: Makefile process.c

 Log Message:
 PR/48880: Ryo ONODERA: Unapply one of our patches that broke 'G'.


 To generate a diff of this commit:
 cvs rdiff -u -r1.15 -r1.16 src/usr.bin/sed/Makefile
 cvs rdiff -u -r1.42 -r1.43 src/usr.bin/sed/process.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Ryo ONODERA <ryo_on@yk.rim.or.jp>
To: gnats-bugs@NetBSD.org, christos@netbsd.org
Cc: 
Subject: Re: PR/48880 CVS commit: src/usr.bin/sed
Date: Tue, 10 Jun 2014 08:59:22 +0900 (JST)

 From: "Christos Zoulas" <christos@netbsd.org>, Date: Sat,  7 Jun 2014 16:40:01 +0000 (UTC)

 > The following reply was made to PR bin/48880; it has been noted by GNATS.
 > 
 > From: "Christos Zoulas" <christos@netbsd.org>
 > To: gnats-bugs@gnats.NetBSD.org
 > Cc: 
 > Subject: PR/48880 CVS commit: src/usr.bin/sed
 > Date: Sat, 7 Jun 2014 12:36:54 -0400
 > 
 >  Module Name:	src
 >  Committed By:	christos
 >  Date:		Sat Jun  7 16:36:54 UTC 2014
 >  
 >  Modified Files:
 >  	src/usr.bin/sed: Makefile process.c
 >  
 >  Log Message:
 >  PR/48880: Ryo ONODERA: Unapply one of our patches that broke 'G'.

 Man pages of GNU Autotooolized packages has correct filename now.

 Thanks for your quick fix.

 --
 Ryo ONODERA // ryo_on@yk.rim.or.jp
 PGP fingerprint = 82A2 DC91 76E0 A10A 8ABB  FD1B F404 27FA C7D1 15F3

State-Changed-From-To: open->closed
State-Changed-By: christos@NetBSD.org
State-Changed-When: Mon, 09 Jun 2014 20:18:54 -0400
State-Changed-Why:
thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.