PR/48880: Ryo ONODERA: Unapply one of our patches that broke 'G'.