usr.bin/sed/process.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: process.c,v 1.42 2014/06/07 06:02:27 ryoon Exp $	*/
+/*	$NetBSD: process.c,v 1.43 2014/06/07 16:36:54 christos Exp $	*/
 
 /*-
  * Copyright (c) 1992 Diomidis Spinellis.
@@ -38,7 +38,7 @@
 #endif
 
 #include <sys/cdefs.h>
-__RCSID("$NetBSD: process.c,v 1.42 2014/06/07 06:02:27 ryoon Exp $");
+__RCSID("$NetBSD: process.c,v 1.43 2014/06/07 16:36:54 christos Exp $");
 #ifdef __FBSDID
 __FBSDID("$FreeBSD: head/usr.bin/sed/process.c 192732 2009-05-25 06:45:33Z brian $");
 #endif
@@ -154,8 +154,7 @@ redirect:
 				cspace(&PS, hs, hsl, REPLACE);
 				break;
 			case 'G':
-				if (hs == NULL)
-					cspace(&HS, "\n", 1, REPLACE);
+				cspace(&PS, "\n", 1, APPEND);
 				cspace(&PS, hs, hsl, APPEND);
 				break;
 			case 'h':
